exports[`Navigator should render the currently active tab 1`] = `
<View
  style={
    Object {
      "flex": 1
    }
  }>
  <NavigationTransitioner
    navigationState={
      Object {
        "index": 0,
        "routes": Array [
          Object {
            "context": Object {},
            "key": "B"
          }
        ]
      }
    }
    render={[Function bound _render]}
    style={undefined} />
  <View
    style={
      Object {
        "backgroundColor": "#fff",
        "borderTopColor": "#dfe5e6",
        "borderTopWidth": 1,
        "bottom": 0,
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "space-between",
        "left": 0,
        "position": "absolute",
        "right": 0
      }
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
</View>
`;

exports[`Navigator should render the currently active tab 2`] = `
<View
  style={
    Object {
      "flex": 1
    }
  }>
  <NavigationTransitioner
    navigationState={
      Object {
        "index": 0,
        "routes": Array [
          Object {
            "context": Object {},
            "key": "A"
          }
        ]
      }
    }
    render={[Function bound _render]}
    style={undefined} />
  <View
    style={
      Object {
        "backgroundColor": "#fff",
        "borderTopColor": "#dfe5e6",
        "borderTopWidth": 1,
        "bottom": 0,
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "space-between",
        "left": 0,
        "position": "absolute",
        "right": 0
      }
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
</View>
`;
